--- a/.github/workflows/build-cln.yaml
+++ b/.github/workflows/build-cln.yaml
@@ -57,6 +57,9 @@ jobs:
         run: |
           bash -x .github/scripts/setup.sh
 
+      - name: Setup sccache
+        uses: mozilla-actions/sccache-action@v0.0.9
+
       - name: Build
         env:
           COMPILER: ${{ inputs.compiler }}
@@ -65,9 +68,10 @@ jobs:
           VALGRIND: ${{ inputs.valgrind }}
           COMPAT: 1
           CFG: ${{ inputs.cfg }}
+          RUSTC_WRAPPER: sccache
         run: |
           set -e
-          ./configure --enable-debugbuild CC="$COMPILER" ${{ inputs.coptflags }}
+          ./configure --enable-debugbuild CC="sccache $COMPILER" ${{ inputs.coptflags }}
 
           uv run make -j $(nproc) testpack.tar.bz2
 
@@ -75,6 +79,8 @@ jobs:
           mv testpack.tar.bz2 cln-${CFG}.tar.bz2
 
       - name: Check rust packages
+        env:
+          RUSTC_WRAPPER: sccache
         run: cargo test --all
 
       - uses: actions/upload-artifact@v4
