--- a/plugins/lsps-plugin/Cargo.toml
+++ b/plugins/lsps-plugin/Cargo.toml
@@ -23,6 +23,6 @@ log = "0.4"
 paste = "1.0.15"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["raw_value"] }
 thiserror = "2.0"
 tokio = { version = "1.44", features = ["full"] }
