ci: Update GitHub Actions runner to Ubuntu 24.04 due to timeout reports on 22.04
Changelog-None: CI fixes only.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ env:
 jobs:
   prebuild:
     name: Pre-build checks
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     if: |
       github.event.action != 'edited' ||
@@ -107,7 +107,7 @@ jobs:
 
   compile:
     name: Compile CLN ${{ matrix.cfg }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     needs:
       - prebuild
@@ -174,7 +174,7 @@ jobs:
     # The unit test checks are not in the critical path (not dependent
     # on the integration tests), so run them with `valgrind`
     name: Run unit tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 60
     env:
       BOLTDIR: bolts
@@ -219,7 +219,7 @@ jobs:
 
   check-fuzz:
     name: Run fuzz regression tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs:
       - prebuild
     steps:
@@ -245,7 +245,7 @@ jobs:
 
   check-downgrade:
     name: Check we can downgrade the node
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs:
       - compile
     strategy:
@@ -298,8 +298,8 @@ jobs:
         run: |
           mkdir /tmp/old-cln
           cd /tmp/old-cln
-          wget https://github.com/ElementsProject/lightning/releases/download/v25.09/clightning-v25.09-Ubuntu-22.04-amd64.tar.xz
-          tar -xaf clightning-v25.09-Ubuntu-22.04-amd64.tar.xz
+          wget https://github.com/ElementsProject/lightning/releases/download/v25.09/clightning-v25.09-ubuntu-24.04-amd64.tar.xz
+          tar -xaf clightning-v25.09-ubuntu-24.04-amd64.tar.xz
 
       - name: Switch network
         if: ${{ matrix.TEST_NETWORK == 'liquid-regtest' }}
@@ -333,7 +333,7 @@ jobs:
 
   integration:
     name: Test CLN ${{ matrix.name }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 120
     env:
       RUST_PROFILE: release # Has to match the one in the compile step
@@ -448,7 +448,7 @@ jobs:
 
   integration-valgrind:
     name: Valgrind Test CLN ${{ matrix.name }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 120
     env:
       RUST_PROFILE: release # Has to match the one in the compile step
@@ -535,7 +535,7 @@ jobs:
 
   integration-sanitizers:
     name: Sanitizers Test CLN
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 120
     env:
       RUST_PROFILE: release
@@ -625,7 +625,7 @@ jobs:
   update-docs-examples:
     name: Update examples in doc schemas (disabled temporarily!)
     if: false
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     strategy:
       fail-fast: false
@@ -674,7 +674,7 @@ jobs:
 
   min-btc-support:
     name: Test minimum supported BTC v${{ matrix.MIN_BTC_VERSION }} with ${{ matrix.NAME }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 120
     env:
       RUST_PROFILE: release # Has to match the one in the compile step
@@ -759,7 +759,7 @@ jobs:
     # signals successful completion. Used for the PR status to pass
     # before merging.  Needs to run even if they failed!
     name: CI completion
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs:
       - integration
       - check-units
