--- a/plugins/rest-plugin/Cargo.toml
+++ b/plugins/rest-plugin/Cargo.toml
@@ -13,23 +13,39 @@ bytes = "1"
 log = { version = "0.4", features = ['std'] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde_yml = "0.0.12"
-quick-xml = { version = "0.37", features = ["serialize"] }
+serde_yaml_ng = "0.10.0"
+quick-xml = { version = "0.38", features = ["serialize"] }
 roxmltree_to_serde = "0.6"
 serde_qs = "0.15"
 tokio-util = { version = "0.7", features = ["codec"] }
-tokio = { version="1", features = ['io-std', 'rt-multi-thread', 'sync', 'macros', 'io-util'] }
+tokio = { version = "1", features = [
+    'io-std',
+    'rt-multi-thread',
+    'sync',
+    'macros',
+    'io-util',
+] }
 axum = "0.8"
-axum-server = { version = "0.6", features = ["tls-rustls"] }
-futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
+axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
+rustls = { version = "0.23", default-features = false, features = [
+    "logging",
+    "tls12",
+    "std",
+    "ring",
+] }
+matchit = "0.9"
+futures-util = { version = "0.3", default-features = false, features = [
+    "sink",
+    "std",
+] }
 rcgen = "0.13"
 hyper = "1"
-tower= "0.5"
+tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "set-header"] }
 utoipa = { version = "5", features = ['axum_extras'] }
 
 log-panics = "2"
-socketioxide = "0.15"
+socketioxide = { version = "0.16", features = ["state"] }
 
 cln-plugin = { workspace = true }
 cln-rpc = { workspace = true }
