--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,6 +67,12 @@ repos:
       exclude: ccan|contrib|tests/fuzz/corpora
       stages: [ manual ]
 
+- repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+  rev: v9.23.0
+  hooks:
+    - id: commitlint
+      stages: [commit-msg]
+
 - repo: local
   hooks:
     # Reimplementation of `make check-amount-access` for pygrep.
