--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,9 @@
 repos:
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
-  rev: v0.8.0
+- repo: https://github.com/pycqa/flake8
+  rev: 7.3.0
   hooks:
-    # Run the linter.
-    - id: ruff
-      args: [ --diff ]
-      exclude: "contrib/pyln-grpc-proto/pyln/grpc/(primitives|node)_pb2(|_grpc).py"
-    # Run the formatter.
-    - id: ruff-format
-      args: [ --diff ]
+    - id: flake8
+      args: [ "--ignore=E501,E731,E741,W503,F541,E275" ]
       exclude: "contrib/pyln-grpc-proto/pyln/grpc/(primitives|node)_pb2(|_grpc).py"
 
 - repo: https://github.com/shellcheck-py/shellcheck-py
